2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: drop redundant environment sanitization
	* tests/Makefile.am (TESTS_ENVIRONMENT): Don't remove `planned'
	from the environment.
	* tests/defs-static.in: Don't complain if `planned' is set in
	the environment.
	* tests/self-check-env-sanitize.test: Update.

2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: fix bug in plain version of `skip_all_'
	* tests/plain-functions.sh (skip_all_): Call `skip_', not `skip'.

2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: small cleanups and tweakings
	* tests/defs: Where possible, prefer `framework_failure_' or
	`fatal_' to `Exit 99'.  Try to catch more possible hard errors
	and setup failures.  Do not hide expected error messages.  Avoid
	a couple of forks when copying files from `$(top_srcdir)/lib'.
	($signal): Remove, no more needed.

2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: improve interface for giving early TAP plan
	Since commit `v1.11-976-g4740f56', an early TAP plan can also be
	specified after input lines have already been seen, as long as
	no one of them is a TAP result line.  We can now take advantage
	of this in our own testsuite, allowing the TAP-based scripts to
	specify their earlier plan after having included `./defs'.  In
	particular, this offers the benefit of allowing those scripts to
	issue a "skip all" plan (e.g., "1..0 # SKIP reason ...") after
	the inclusion of `./defs', which wasn't possible with the older
	interface (introduced in commit `v1.11-1114-g0286308').
	* tests/defs: Don't try to call `plan_' if `$planned' is defined,
	the calling scripts can do that directly now.
	* tests/ac-output-old.tap: Use `plan_' directly instead of
	setting `$planned' before including `./defs'.
	* tests/automake-cmdline.tap: Likewise.
	* tests/depmod.tap: Likewise.
	* tests/instspc.tap: Likewise.
	* tests/tap-bad-prog.tap: Likewise.