@@ -26,13 +26,7 @@ END
 
 # $failure_statuses should be defined to the list of all integers between
 # 1 and 255 (inclusive), excluded 77 and 99.
-# Let's use `seq' if available, it's faster than the loop.
-failure_statuses=`seq 1 255 \
-  || { i=1; while test $i -le 255; do echo $i; i=\`expr $i + 1\`; done; }`
-failure_statuses=`
-  for i in $failure_statuses; do
-    test $i -eq 77 || test $i -eq 99 || echo $i
-  done | tr "$nl" ' '`
+failure_statuses=`seq_ 1 255 | $EGREP -v '^(77|99)$' | tr "$nl" ' '`
 # For debugging.
 echo "failure_statuses: $failure_statuses"
 # Sanity check.
