@@ -23,21 +23,6 @@ use_vpath=no
 
 . "$testsrcdir"/testsuite-summary-checks.sh || Exit 99
 
-seq_ ()
-{
-  case $# in
-   2) l=$1 u=$2;;
-   *) fatal_ "incorrect usage of 'seq_' function";;
-  esac
-  seq $1 $2 || {
-    i=$l
-    while test $i -le $u; do
-      echo $i
-      i=`expr $i + 1`
-    done
-  }
-}
-
 ./configure
 
 header="\
