@@ -1,5 +1,12 @@
 2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: more uses of the `seq_' function
+	* tests/parallel-tests-exit-statuses.test: Use the `seq_' function
+	from `tests/defs', instead of duplicating its semantics.
+	* tests/testsuite-summary-count.test: Likewise.
+
+2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: drop redundant environment sanitization
 	* tests/Makefile.am (TESTS_ENVIRONMENT): Don't remove `planned'
 	from the environment.
